docs/7.58/md/abenloop_at_itab_key_abexa.md
---
title: "Source Code"
description: |
  Public class definition CLASS cl_demo_loop_at_itab_using_key DEFINITION INHERITING FROM cl_demo_classrun PUBLIC CREATE PUBLIC. PUBLIC SECTION. METHODS main REDEFINITION. ENDCLASS.  Public class implementation CLASS cl_demo_loop_at_itab_using_key IMPLEMENTATION. METHOD main. TYPES:
version: "7.58"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenloop_at_itab_key_abexa.htm"
abapFile: "abenloop_at_itab_key_abexa.htm"
keywords: ["select", "loop", "do", "if", "method", "class", "data", "types", "internal-table", "abenloop", "itab", "key", "abexa"]
---

* * *

AS ABAP Release 758, ©Copyright 2024 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_data_working.htm) →  [Internal Tables (itab)](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenitab.htm) →  [itab - Processing Statements](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abentable_processing_statements.htm) →  [LOOP AT itab](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abaploop_at_itab_variants.htm) →  [LOOP AT itab, Basic Form](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abaploop_at_itab.htm) →  [LOOP AT itab, cond](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abaploop_at_itab_cond.htm) → 

 [![](Mail.gif?object=Mail.gif "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback%20on%20ABAP%20Documentation&body=Document:%20itab%20-%20Loop%20with%20Key%2C%20ABENLOOP_AT_ITAB_KEY_ABEXA%2C%20758%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion%20for%20improvement:)

itab - Loop with Key

The example demonstrates the execution of the statement LOOP AT itab with different table keys.

Source Code   

\* Public class definition
CLASS cl\_demo\_loop\_at\_itab\_using\_key DEFINITION
  INHERITING FROM cl\_demo\_classrun
  PUBLIC
  CREATE PUBLIC.
  PUBLIC SECTION.
    METHODS main REDEFINITION.
ENDCLASS.
\* Public class implementation
CLASS cl\_demo\_loop\_at\_itab\_using\_key IMPLEMENTATION.
  METHOD main.
    TYPES:
      BEGIN OF spfli\_line,
        carrid   TYPE spfli-carrid,
        connid   TYPE spfli-connid,
        cityfrom TYPE spfli-cityfrom,
        cityto   TYPE spfli-cityto,
      END OF spfli\_line.
    DATA output TYPE TABLE OF spfli\_line WITH EMPTY KEY.
    DATA spfli\_tab TYPE HASHED TABLE
                   OF spfli\_line
                   WITH UNIQUE KEY primary\_key
                     COMPONENTS carrid connid
                   WITH NON-UNIQUE SORTED KEY city\_from\_to
                     COMPONENTS cityfrom cityto
                   WITH NON-UNIQUE SORTED KEY city\_to\_from
                     COMPONENTS cityto cityfrom.
    FIELD-SYMBOLS <spfli> LIKE LINE OF spfli\_tab.
    SELECT carrid, connid, cityfrom, cityto
           FROM spfli
           ORDER BY carrid, connid
           INTO TABLE @spfli\_tab.
    CLEAR output.
    out->next\_section( 'LOOP without USING KEY' ).
    LOOP AT spfli\_tab ASSIGNING <spfli>.
      output = VALUE #( BASE output ( <spfli> ) ).
    ENDLOOP.
    out->write( output ).
    CLEAR output.
    out->next\_section( 'LOOP with USING KEY cityfrom cityto' ).
    LOOP AT spfli\_tab ASSIGNING <spfli> USING KEY city\_from\_to.
      output = VALUE #( BASE output ( <spfli> ) ).
    ENDLOOP.
    out->write( output ).
    CLEAR output.
    out->next\_section( 'LOOP with USING KEY cityto cityfrom' ).
    LOOP AT spfli\_tab ASSIGNING <spfli> USING KEY city\_to\_from.
      output = VALUE #( BASE output ( <spfli> ) ).
    ENDLOOP.
    out->write( output ).
  ENDMETHOD.
ENDCLASS.

Description   

The table spfli\_tab is a hashed table with an unique primary key and two non-unique sorted secondary keys.

-   The first LOOP takes place without a key specification. The table output is in the order in which the table was filled, that is, sorted by the fields specified after ORDER BY in the SELECT statement.
-   The other two LOOP loops are performed with each of the secondary table keys city\_from\_to or city\_to\_from specified.